<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textViewMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensaje"
        android:padding="@dimen/margin" />

    <LinearLayout
        android:id="@+id/linearLayoutNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewMensaje"
        android:orientation="vertical"
        android:padding="@dimen/margin" >

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:maxLines="1" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutNombre"
        android:orientation="vertical"
        android:padding="@dimen/margin" >

        <TextView
            android:id="@+id/textViewEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edad"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinnerEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutEstudiante"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutEdad"
        android:orientation="horizontal" 
        android:padding="@dimen/margin">

        <TextView
            android:id="@+id/textViewEstudiante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estudiante"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <CheckBox
            android:id="@+id/checkBoxEstudiante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

   <RadioGroup
       android:id="@+id/radioGroupGenero"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
	   	android:layout_below="@+id/linearLayoutEstudiante"
        android:padding="@dimen/margin"
        android:checkedButton="@+id/radioButtonMujer" >
	
	    <RadioButton
	        android:id="@+id/radioButtonMujer"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/mujer"
	        android:layout_marginRight="@dimen/size" />
	
	    <RadioButton
	        android:id="@+id/radioButtoHombre"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/hombre" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayoutBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroupGenero"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/margin" >

        <Button
            android:id="@+id/buttonEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enviar"
        	android:padding="@dimen/margin" />

        <Button
            android:id="@+id/buttonBorrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrar"
        	android:padding="@dimen/margin" />
    </LinearLayout>

    

</RelativeLayout>